--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpg" href="/logo_rubnk.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ruben K - Portfolio</title>
+    <title>Portfolio | RubnK</title>
   </head>
   <body>
     <div id="root"></div>
