Ajout d'une description générale

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/jpg" href="/logo_rubnk.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio | RubnK</title>
+    <meta name="description" content="Bienvenue sur le portfolio de RubnK, développeur web et logiciel fullstack, passionné par la photographie. Découvrez mes projets et mes photos." />
   </head>
   <body>
     <div id="root"></div>
